--- a/style.css
+++ b/style.css
@@ -132,3 +132,40 @@ option {
     border-radius: 4px;
     background-color: #f1f1f1;
 }
+
+@media (max-width: 600px) {
+    .grid-container {
+        grid-template-columns: auto;
+    }
+    .item1 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+    .item2 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+    .item3 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+        text-align: center;
+    }
+    .item4 {
+        grid-column-start: 1;
+        grid-column-end: 1;
+    }
+    .grid-container-gallery {
+        grid-template-columns: auto;
+    }
+    .item3 p {
+        display: block;
+        clear: both;
+    }
+    .item3 address {
+        display: block;
+        clear: both;
+    }
+    .grid-item-g {
+        padding: 5px;
+    }
+}
